feat/TodoList 기능 구현 완료

--- a/React_Todo_List/src/components/TodoBoard.css
+++ b/React_Todo_List/src/components/TodoBoard.css
@@ -4,27 +4,17 @@
     flex-direction: column;
    
     }
-    .deleteButton{
-        flex-direction: row;
-        flex-grow: 0;
-        position: relative;
-        right: -250px;
-        top: -23px;
-        color: white;
-       background-color:rgb(194, 190, 255);
-       border-radius: 4px ;
-       border-color: rgb(167, 161, 255);
-    }
+
     .checkBut{
         position: relative;
-        right: -120px;
-        top: -20px;
+        right: -20px;
+        top: -18px;
       
     }
     .checkBut-false{
         position: relative;
-        right: -120px;
-        top: -20px;
+        right: -20px;
+        top: -18px;
     }
     .TodolistBox{
         border-radius: 8px;
@@ -34,4 +24,28 @@
         margin: 10px 0 10px 0;
         box-shadow: 4px 4px rgb(194, 190, 255)
        
+    }
+    .changeButton{
+        flex-direction: row;
+        flex-grow: 0;
+        position: relative;
+        right: -200px;
+        top: -23px;
+        color: white;
+       background-color:rgb(194, 190, 255);
+       border-radius: 4px ;
+       border-color: rgb(167, 161, 255);
+      margin-right: 2px;
+    }
+    .deleteButton{
+        flex-direction: row;
+        flex-grow: 0;
+        position: relative;
+        right: -200px;
+        top: -23px;
+        color: white;
+       background-color:rgb(194, 190, 255);
+       border-radius: 4px ;
+       border-color: rgb(167, 161, 255);
+      
     }
