--- a/React_Todo_List/src/components/TodoInput.css
+++ b/React_Todo_List/src/components/TodoInput.css
@@ -30,3 +30,9 @@
 .titleWrap{
     padding:1rem; 
 }
+.TitleContainer{
+    color: rgb(194, 190, 255);
+    margin-left: 20px;
+    font-size: large;
+    text-align: center;
+}
